# 2022_Paper_Serverless_Performance_Evaluation

./: .gitignore  CITATION.cff  LICENSE  README.md
Function-Director/: Dockerfile  FunctionDirector.py  Models.py  TestRunSettings.py  makefile  requirements.txt
Functions/baseline/: CMakeLists.txt  Makefile  baseline_test.cpp
Functions/nuclio/: makefile
Functions/nuclio/Dummy/: Dockerfile  makefile  sourcecpp
Functions/nuclio/Dummy-Go/: Dockerfile  function.go  makefile
Functions/nuclio/Magick/: Dockerfile  makefile  sourcecpp
Functions/nuclio/Magick-NP/: makefile  sourcecpp
Functions/openfaas/: magick-example-dummy.yml  magick-example-no-processing.yml  magick-example.yml  makefile
Functions/openfaas/magick-example/: example.cpp
Functions/openfaas/magick-example-dummy/: example.cpp
Functions/openfaas/magick-example-no-processing/: Dockerfile  example.cpp
